--- a/src/locale/messages.am.xlf
+++ b/src/locale/messages.am.xlf
@@ -77,17 +77,17 @@
         </context-group>
       </trans-unit>
       <trans-unit id="5485045432871737355" datatype="html">
-        <source> Gender: <x id="ICU" equiv-text="{genderCode, select, 0 {male} 1 {female} other {other answer}}" xid="942937716535918063"/>
+        <source> Gender: <x id="ICU" equiv-text="{genderCode, select, 0 {male} 1 {female}}" xid="942937716535918063"/>
 </source>
-        <target> ጾታ: <x id="ICU" equiv-text="{genderCode, select, 0 {male} 1 {female} other {other answer}}" xid="942937716535918063"/></target>      
+        <target> ጾታ: <x id="ICU" equiv-text="{genderCode, select, 0 {male} 1 {female}}" xid="942937716535918063"/></target>      
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/home/home.component.html</context>
           <context context-type="linenumber">3,5</context>
         </context-group>
       </trans-unit>
       <trans-unit id="942937716535918063" datatype="html">
-        <source>{VAR_SELECT, select, 0 {male} 1 {female} other {other answer}}</source>
-        <target>{VAR_SELECT, select, 0 {ወንድ} 1 {ሴት} other {ሌላ መልስ}}</target>
+        <source>{VAR_SELECT, select, 0 {male} 1 {female}}</source>
+        <target>{VAR_SELECT, select, 0 {ወንድ} 1 {ሴት}}</target>
         <context-group purpose="location">
           <context context-type="sourcefile">src/app/home/home.component.html</context>
           <context context-type="linenumber">3,5</context>
